Update credit in changelog with real name.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,7 +2,7 @@
 
 o [Ncat][GH#446] Added Datagram TLS (DTLS) support to Ncat in connect (client)
   mode with --udp --ssl. Also added Application Layer Protocol Negotiation
-  (ALPN) support with the --ssl-alpn option. [denandz, Daniel Miller]
+  (ALPN) support with the --ssl-alpn option. [Denis Andzakovic, Daniel Miller]
 
 o Updated the default ciphers list for Ncat and the secure ciphers list for
   Nsock to use "!aNULL:!eNULL" instead of "!ADH". With the addition of ECDH
