--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,10 @@ o [GH#926] The rarity level of MS SQL's service detection probe was decreased.
   Now we can find MS SQL in odd ports without increasing version intensity.
   [Paulino Calderon]
 
+o [NSE][GH#892] New script http-bigip-cookie decodes unencrypted F5 BIG-IP
+  cookies and reports back the IP address and port of the actual server behind
+  the load-balancer. [Seth Jackson]
+
 o [NSE] New script http-jsonp-detection Attempts to discover JSONP endpoints in 
   web servers. JSONP endpoints can be used to bypass Same-origin Policy 
   restrictions in web browsers. [Vinamra Bhatia]
