--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 #s wa Nmap Changelog ($Id$); -*-text-*-
 
-o [GH#977] Improved DNS service version detection coverage and consitentcy
+o [GH#977] Improved DNS service version detection coverage and consistency
   by using data from a Project Sonar Internet wide survey. Numerouse false
   positives were removed and reliable softmatches added. Match lines for
   version.bind responses were also conslidated using the technique below.
