--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 #s wa Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] http-trane-info obtains information from Trane Tracer SC controllers
+  and connected HVAC devices. [Pedro Joaquin]
+
 o [GH#981][GH#984][GH#996][GH#975] Fixed Ncat proxy authentication issues:
   - Usernames and/or passwords could not be empty
   - Passwords could not contain colons
