--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 #Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE][GH#1062][GH#1149] Some changes to brute.lua to better handle
+  misbehaving or rate-limiting services. Most significantly,
+  brute.killstagnated now defaults to true. Thanks to xp3s and Adamtimtim for
+  reporing infinite loops and proposing changes.
+
 o [NSE][GH#609] New script nbd-info uses the new nbd.lua library to query
   Network Block Devices for protocol and file export information. [Mak Kolybabi]
 
